--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -72,13 +72,13 @@ In der Kategorie \textbf{Swimlanes} befinden sich \textit{Pools} und \textit{Lan
 Start und Ende von Prozessen werden in BPMN durch \textit{Ereignisse} beschrieben. Diese werden in  \textit{Startereignisse} und \textit{Endereignisse} unterschieden.  Weiterhin gibt es auch noch \textit{Zwischenereignisse}. \newline
 
 \textit{Aktivitäten} stellen Arbeitseinheiten dar und stellen einen Oberbegriff für Aufgaben, Unterprozesse und Aufruf-Aktivitäten dar. Beschriftet werden sie mit einer Objekt-Verb-Verbindung (z.B. Lieferung überprüfen) \cite{gpfert2012}. \newline
-Mit Hilfe von \textit{Gateways} lässt sich der Prozessablauf kontrollieren und steuern, da durch diese Verzweigungen und Zusammenführungen von Sequenzflüssen dargestellt werden. \cite{gpfert2012, allweyer2013}. Hierbei werden \textit{Exklusive Gateways} zur Modellierung alternativer Pfade, \textit{Parallele Gateways} zur Modellierung parallel ablaufender Pfade, \textit{inklusive Gateways} zur Modellierung der Auswahl eines oder mehrerer Pfade und \textit{komplexe Gateways} zur Modellierung komplexer Regeln bei Verzweigungen und Zusammenführungen, unterschieden \cite{allweyer2013}.\newline 
+Mit Hilfe von \textit{Gateways} lässt sich der Prozessablauf kontrollieren und steuern, da durch diese Verzweigungen und Zusammenführungen von Sequenzflüssen dargestellt werden. \cite{gpfert2012, allweyer2013}. Hierbei werden \textit{Exklusive Gateways} zur Modellierung alternativer Pfade, \textit{Parallele Gateways} zur Modellierung parallel ablaufender Pfade, \textit{Inklusive Gateways} zur Modellierung der Auswahl eines oder mehrerer Pfade und \textit{Komplexe Gateways} zur Modellierung komplexer Regeln bei Verzweigungen und Zusammenführungen, unterschieden \cite{allweyer2013}.\newline 
 
 \begin{figure}[H]
 \begin{center}
-  \includegraphics[scale=0.8]{gateways} %pdf, jpg, png...
+  \includegraphics[scale=0.8]{gates} %pdf, jpg, png...
   \caption{BPMN-Gateways}
-  \label{fig:gateways}
+  \label{fig:gates}
 \end{center}
 \end{figure} 
 
