--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -584,7 +584,7 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 
  
  
- \begin{figure}[htp]
+ \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{Entscheidungspunkte} %pdf, jpg, png...
   \caption{Entscheidungspunkte V-Modell XT nach \cite{2004vmodell}}
@@ -592,58 +592,122 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 \end{center}
 \end{figure}
  
-\begin{sidewaysfigure}[htp]
+\begin{sidewaysfigure}[!htbp]
 \begin{center}
-  \includegraphics[scale=0.7]{v-modell} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{v-modell} %pdf, jpg, png...
   \caption{Entscheidungspunkte für die Projektdurchführungsstrategie nach \cite{2004vmodell}}
   \label{fig:v-modell}
 \end{center}
 \end{sidewaysfigure}
 \subsection{Imperative Modellierung V-Modell}
 
-
-\begin{sidewaysfigure}[htp]
+\subsubsection{Angebots- und Vetragswesen}
+\begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[scale=0.7]{AngebotsVetragswesenVModell} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{AngebotsVetragswesenVModell} %pdf, jpg, png...
   \caption{Angebots- und Vetragswesen V-Modell}
   \label{fig:AngebotsVetragswesenVModell}
 \end{center}
-\end{sidewaysfigure}
+\end{figure}
 
 
-\begin{sidewaysfigure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[scale=0.7]{AngebotErstellenVModell} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{AngebotErstellenVModell} %pdf, jpg, png...
   \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Angebot erstellen}
   \label{fig:AngebotErstellenVModell}
 \end{center}
-\end{sidewaysfigure}
+\end{figure}
 
-\begin{sidewaysfigure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[scale=0.7]{Vertragabschliessen} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{Vertragabschliessen} %pdf, jpg, png...
   \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Vertrag abschließen}
   \label{fig:Vertragabschliessen}
 \end{center}
-\end{sidewaysfigure}
+\end{figure}
 
 
-\begin{sidewaysfigure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[scale=0.7]{Vertragszusatzabschlieen} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{Vertragszusatzabschlieen} %pdf, jpg, png...
   \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Vertragzusatz abschließen}
   \label{fig:Vertragszusatzabschlieen}
 \end{center}
-\end{sidewaysfigure}
+\end{figure}
 
-\begin{sidewaysfigure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[scale=0.7]{Lieferungerstellen} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{Lieferungerstellen} %pdf, jpg, png...
   \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Lieferung erstellen}
   \label{fig:Lieferungerstellen}
 \end{center}
-\end{sidewaysfigure}
+\end{figure}
 
+
+\subsubsection{Planung und Steuerung}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{PlanungUndSteuerung} %pdf, jpg, png...
+  \caption{Planung und Steuerung}
+  \label{fig:PlanungUndSteuerung}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{ProjektfortschrittsEntscheidung} %pdf, jpg, png...
+  \caption{Planung und Steuerung - Unterprozess Projektfortschrittsentscheidung herbeiführen}
+  \label{fig:ProjektFortschrittsentscheidung}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{ProjekthandbuchErstellen} %pdf, jpg, png...
+  \caption{Planung und Steuerung - Unterprozess Projekthandbuch erstellen}
+  \label{fig:ProjekthandbuchErstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{QSHandbuch} %pdf, jpg, png...
+  \caption{Planung und Steuerung - Unterprozess QS-Handbuch erstellen}
+  \label{fig:QSHandbuch}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Schatzungdurchfuhren} %pdf, jpg, png...
+  \caption{Planung und Steuerung - Schätzung durchführen}
+  \label{fig:Schatzungdurchfuhren}
+\end{center}
+\end{figure}
+
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{RisikenManagen} %pdf, jpg, png...
+  \caption{Planung und Steuerung - Risiken managen}
+  \label{fig:RisikenManagen}
+\end{center}
+\end{figure}
+
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{ProjektPlanen} %pdf, jpg, png...
+  \caption{Planung und Steuerung - Projekt planen}
+  \label{fig:ProjektPlanen}
+\end{center}
+\end{figure}
 
 \subsection{Deklarative Modellierung V-Modell}
 \subsection{Vergleich}
