--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -1,3 +1,30 @@
+\chapter{BPMN Notation}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{BPM} %pdf, jpg, png...
+  \caption{BPMN Ereignisse}
+  \label{fig:BPM}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{BPM_2} %pdf, jpg, png...
+  \caption{BPMN Übersicht}
+  \label{fig:BPM_2}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{gatewa} %pdf, jpg, png...
+  \caption{BPMN Gateways}
+  \label{fig:gateways}
+\end{center}
+\end{figure}
+
 \chapter{ConDec Notation}
 
  
