--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -710,7 +710,30 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 \end{figure}
 
 \subsection{Deklarative Modellierung V-Modell}
+
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Angebotswesen} %pdf, jpg, png...
+  \caption{Angebots- und Vertragswesen - deklarativ}
+  \label{fig:Angebotswesen}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Planung} %pdf, jpg, png...
+  \caption{Planung und Steuerung - deklarativ}
+  \label{fig:Planung}
+\end{center}
+\end{figure}
 \subsection{Vergleich}
+
+
+
+
 
 
 
