--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -709,6 +709,132 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 \end{center}
 \end{figure}
 
+\clearpage
+
+
+\subsubsection{Systementwurf}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Systementwurf} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ}
+  \label{fig:Systementwurf}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{SystemarchitekturErstellen} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Unterprozess Systemarchitektur erstellen}
+  \label{fig:SystemarchitekturErstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{UnterstutzungsSystemarchitektur} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Unterprozess Unterstutzungssystemarchitektur erstellen}
+  \label{fig:SystemarchitekturErstellen}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Styleguide} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Unterprozess Styleguide fur die Mensch-Maschine-Schnittstelle erstellen}
+  \label{fig:Styleguide}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{HW-Architekturerstellen} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Unterprozess HW-Architektur erstellen}
+  \label{fig:HW-Architekturerstellen}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{SW-Architekturerstellen} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Unterprozess SW-Architektur erstellen}
+  \label{fig:SW-Architekturerstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Datenbankentwurferstellen} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Datenbankentwurf erstellen}
+  \label{fig:Datenbankentwurferstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Implementierungs} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Implementierungs-, Integrations- und Prufkonzept System erstellen}
+  \label{fig:Implementierungs-, Integrations- und Prufkonzept System erstellen}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Integrations} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Implementierungs-, Integrations- und Prufkonzept Unterstutzungssystem erstellen}
+  \label{fig:Implementierungs-, Integrations- und Prufkonzept Unterstutzungssystem erstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Prufkonzept} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Implementierungs-, Integrations- und Prufkonzept SW erstellen}
+  \label{fig:Implementierungs-, Integrations- und Prufkonzept SW erstellen}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Migrationskonzepterstellen} %pdf, jpg, png...
+  \caption{Systementwurf-imperativ-Migrationskonzept erstellen}
+  \label{fig:Migrationskonzepterstellen}
+\end{center}
+\end{figure}
+
+
+\subsubsection{Berichtswesen}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Berichtswesen} %pdf, jpg, png...
+  \caption{Berichtswesemn-imperativ}
+  \label{fig:ProjektPlanen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Projektstatusbericht} %pdf, jpg, png...
+  \caption{Berichtswesemn-imperativ-Unterprozess Projektstatusbericht erstellen}
+  \label{fig:Projektstatusbericht}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{Besprechung} %pdf, jpg, png...
+  \caption{Berichtswesemn-imperativ-Unterprozess Besprechung durchführen}
+  \label{fig:Besprechung}
+\end{center}
+\end{figure}
+
 \subsection{Deklarative Modellierung V-Modell}
 
 
@@ -726,6 +852,15 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 \begin{center}
   \includegraphics[width=\linewidth]{Planung} %pdf, jpg, png...
   \caption{Planung und Steuerung - deklarativ}
+  \label{fig:Planung}
+\end{center}
+\end{figure}
+\subsection{Vergleich}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{BerichtswesenDec} %pdf, jpg, png...
+  \caption{Berichtswesen - deklarativ}
   \label{fig:Planung}
 \end{center}
 \end{figure}
